--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0",
     "react-iframe": "^1.8.5",
+    "react-owl-carousel": "^2.3.3",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
     "resend": "^3.2.0",
