--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@fortawesome/fontawesome-svg-core": "^6.5.2",
-    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/fontawesome-svg-core": "^6.7.1",
+    "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^2.0.3",
     "@mui/icons-material": "^5.15.18",
@@ -35,6 +35,7 @@
     "nodemailer": "^6.9.14",
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0",
+    "react-icons": "^5.4.0",
     "react-iframe": "^1.8.5",
     "react-toastify": "^10.0.5",
     "resend": "^3.2.0",
